--- a/index.html
+++ b/index.html
@@ -2,26 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My CTF Writeups</title>
+  <title>CTF Writeups by [Your Name]</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>🛡️ CTF Writeups by Eunice</h1>
-    <p>Welcome to my collection of cybersecurity competition writeups.</p>
+    <h1>CTF Writeups Blog</h1>
+    <p>Sharing my cybersecurity learning journey, one challenge at a time.</p>
   </header>
   <main>
-    <section>
-      <h2>Writeups</h2>
-      <ul>
-        <li><a href="writeups/hackthebox-2025.html">HackTheBox CTF 2025</a></li>
-        <li><a href="writeups/godamlah-2024.html">GODAMLah Hackathon 2024</a></li>
-        <!-- Add more as needed -->
-      </ul>
+    <section class="blog-list">
+      <article>
+        <h2><a href="writeups/godamlah2024.html">🏁 GODAMLah 2024 - Forensics Challenge</a></h2>
+        <p class="date">April 14, 2024</p>
+        <p class="summary">Stego challenge involving base64-encoded images hidden in zip archives...</p>
+      </article>
+      <article>
+        <h2><a href="writeups/hackthebox2025.html">🔐 HackTheBox 2025 - BabyRSA</a></h2>
+        <p class="date">March 10, 2025</p>
+        <p class="summary">How I cracked a weak key using factorable primes and recovered the flag...</p>
+      </article>
+      <!-- Add more articles -->
     </section>
   </main>
   <footer>
-    <p>Built with ❤️ using GitHub Pages</p>
+    <p>© 2025 [Your Name] | Built with 💻 on GitHub Pages</p>
   </footer>
 </body>
 </html>
