--- a/index/index.html
+++ b/index/index.html
@@ -7,16 +7,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>younaice</h1>
-      <nav>
-        <a href="#writeups">Writeups</a>
-        <a href="#contact">Contact</a>
-        <button id="theme-toggle">🌙</button>
-      </nav>
-    </div>
-  </header>
+
+<header>
+  <div class="container">
+    <h1>younaice</h1>
+    <nav>
+      <a href="index.html">Writeups</a>
+      <a href="#contact">Contact</a>
+      <button id="theme-toggle">🌙</button>
+    </nav>
+  </div>
+</header>
 
   <section class="intro">
     <div class="container">
@@ -34,7 +35,7 @@
 
       <div class="card-grid" id="writeup-cards">
         <div class="card">
-          <a href="question.html?comp=picoCTF">
+          <a href="../question-list/question.html?comp=picoCTF">
             <h3>picoCTF – Forensics</h3>
             <p>Find hidden clues by examining files and data. Use basic tools to uncover secrets and solve puzzles.</p>
             <span class="tag">Apr 2025</span>
