--- a/question-list/question.html
+++ b/question-list/question.html
@@ -10,7 +10,7 @@
   <div class="container">
     <header>
       <h1>picoCTF Questions</h1>
-      <a href="index.html">← Back to Competitions</a>
+      <a href="../index/index.html">← Back to Competitions</a>
     </header>
 
     <main>
