--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Eunice – CTF Blog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/index/style.css" />
 </head>
 <body>
 
@@ -75,6 +75,6 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="/index/script.js"></script>
 </body>
 </html>
