--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="card">
           <a href="../picoCTF-list/question.html?comp=picoCTF">
             <h3>picoCTF – Forensics</h3>
-            <p>Find hidden clues by examining files and data. Use basic tools to uncover secrets and solve puzzles.</p>
+            <p>Easy Challenges: Find hidden clues by examining files and data. Use basic tools to uncover secrets and solve puzzles.</p>
             <span class="tag">Apr 2025</span>
           </a>
         </div>
